# course_api

./: .flake8  .gitignore  .gitlint  .pre-commit-config.yaml  .yamllint.yml  README.md  docker-compose.yaml  locust.py  nginx.conf  pyproject.toml
app/: initializer.py  main.py
app/config/: _base.py  _custom.py  local.yaml  logging.py
app/internal/api/: status.py
app/internal/api/v1/: exchange.py  router.py
app/internal/api/v1/schemas/request/: exchange.py
app/internal/api/v1/schemas/response/: exchange.py
app/internal/core/: exception_handlers.py  exceptions.py
app/internal/dependencies/: exchange.py
app/internal/repositories/db/: _redis.py  base.py  helpers.py
app/internal/repositories/db/migrations/default/: 0_20240207130559_init.py  1_20240207125005_update.py
app/internal/repositories/db/models/: __init__.py  task.py  user.py
app/internal/services/: exchange.py
app/tests/unit/: patch_config.py
app/tests/unit/test_api/: test_large_request.py
app/tests/unit/test_utils/: test_requests_log.py
deploy/docker/: api.Dockerfile  checker.Dockerfile
docs/: index.md
